# ProtoLink

./: .gitignore  CHANGELOG.md  README.md  SYS_PROMPT.md  TASKS.md  pyproject.toml
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DEPENDENCY_AUDIT_2_0.md  ENGINEERING_TASKLIST.md  ERROR_POLICY.md  EXTENSION_CONTRACT.md  FEATURES_2_0.md  GUI_REFACTOR_TASKLIST.md  HANDOFF.md  HANDOFF_2_0.md  IMPORT_EXPORT.md  INDEX.md  ISSUE_REGISTER_2_0.md  LONG_TERM_ENGINEERING_PLAN.md  MAINLINE_STATUS.md  NATIVE_INSTALLER_CUTOVER_POLICY.json  NATIVE_INSTALLER_PLAN.md  PROJECT_BRIEF.md  PROJECT_FLOW_2_0.md  PROJECT_STATUS.md  REFERENCE_ANALYSIS.md  RELEASE_CHECKLIST.md  RISK_REGISTER.md  ROADMAP.md  SMOKE_CHECKLIST.md  STATUS.md  TASK_ARCHIVE.md  VALIDATION.md  WORKTREE_RECONCILIATION.md
scripts/: audit_gui_layout.py  build_release_deliverables.py  run_full_test_suite.py  run_soak_validation.py  run_targeted_regressions.py  verify_canonical_truth.py  verify_dist_install.py  verify_native_installer_lane.py  verify_release_deliverables.py  verify_release_staging.py
tests/: support.py  test_app.py  test_auto_response.py  test_auto_response_runtime_service.py  test_automation_rule_profiles.py  test_bootstrap.py  test_capture_replay_job_service.py  test_catalog.py  test_channel_bridge_runtime_service.py  test_connection_state_model.py  test_data_tools_service.py  test_device_scan.py  test_device_scan_execution_service.py  test_documents.py  test_errors.py  test_event_bus.py  test_import_export.py  test_logging.py  test_modbus_rtu_parser.py  test_modbus_rtu_workflow_acceptance.py  (+56 more)
(+94 files in other folders)
